--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import '../styles/index.css'
-import 'particles.min.js'
-import 'sparkles.js'
+import 'src/scripts/particles.min.js'
+import 'src/scripts/sparkles.js'
 ---
 
 <html lang="en">
