--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import '../styles/index.css'
-import 'src/scripts/particles.min.js'
-import 'src/scripts/sparkles.js'
+import './particles.min.js'
+import './sparkles.js'
 ---
 
 <html lang="en">
@@ -30,8 +30,8 @@ import 'src/scripts/sparkles.js'
 			
 		</footer>
 
-		<script type="text/javascript" src="src/scripts/particles.min.js"></script>
-		<script type="text/javascript" src="src/scripts/sparkles.js"></script>
+		<script type="text/javascript" src="./particles.min.js"></script>
+		<script type="text/javascript" src="./sparkles.js"></script>
 
 
 
