--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,8 +30,8 @@ import './sparkles.js'
 			
 		</footer>
 
-		<script type="text/javascript" src="./particles.min.js"></script>
-		<script type="text/javascript" src="./sparkles.js"></script>
+		<script src="./particles.min.js"></script>
+		<script src="./sparkles.js"></script>
 
 
 
